feat(HexNPC): enhance NPC shop system